modified:   index.html 	modified:   script.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP Generator</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="script" href="./script.js">
+ 
+    <script src="./script.js"></script>
 </head>
 <body>
 
@@ -13,17 +14,17 @@
         <h1>OTP Generator</h1>
 
         <div class="otp">
-        <p class="otp-box">5</p>
-        <p class="otp-box">6</p>
-        <p class="otp-box">7</p>
-        <p class="otp-box">7</p>
-        <p class="otp-box 6-otp-box">3</p>
-        <p class="otp-box 6-otp-box">3</p>
+        <p class="otp-box  otp-4-box"></p>
+        <p class="otp-box  otp-4-box"></p>
+        <p class="otp-box  otp-4-box"></p>
+        <p class="otp-box  otp-4-box"></p>
+        <p class="otp-box  otp-6-box"></p>
+        <p class="otp-box  otp-6-box"></p>
         </div>
 
         <p>
-        <button>4-Digit OTP</button>
-        <button>6-Digit OTP</button>
+        <button onclick="otp4()">4-Digit OTP</button>
+        <button onclick="otp6()">6-Digit OTP</button>
         </p>
     </div>
      
